Update README files
Change-Id: I5d3869d051dae46f39f3f1b7746d08f612c939b6

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 The IODEF Library is brought to you by CS-SI (http://www.c-s.fr).
 
-Based on libPrelude from original authors
+It is based on libPrelude from original authors
 - Yoann VANDOORSELAERE
 - Nicolas DELON
 - Sebastien TRICAUD
